# enterprise-rag-ops

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: README.md  STRUCTURE_GUIDE.md  kbind.yaml  settings.json
.claude/agents/: _MIGRATION_STATUS.md  _specialist-template.md  brainstorm-agent.md  code-reviewer.md  define-agent.md  design-agent.md  kb-architect.md
.claude/commands/: audit-harness.md  brainstorm.md  define.md  design.md  implement-agy.md  implement.md  new-agent.md  new-command.md  new-kb.md  review.md  sprint-close.md  sprint-start.md  update-kb.md
.claude/hooks/: README.md  STAGED.example.json  commit-gate.sh  gate-track.sh  post-bash-track.sh  post-compact-log.sh  pre-bash-filter.sh  pre-commit-gate.sh  spec-gate.sh
.claude/kb/: _index.yaml
.claude/kb/_research/: README.md
.claude/kb/_templates/: domain-manifest.yaml.template  index.md.template  task.md.template
.claude/kb/observability/: index.md  quick-reference.md
.claude/kb/rag-eval/: index.md  quick-reference.md
.claude/kb/rag-generation/: index.md  quick-reference.md
.claude/kb/rag-retrieval/: domain-manifest.yaml  index.md  quick-reference.md
.claude/scripts/: ac_green_check.py  ac_test_check.py  adr_trace_check.py  autonomy_set_target.py  autonomy_status.py  diff_gate.py  eval_ledger.py  eval_lib.py  eval_verdict.py  kb_health.py  provenance.py  red_baseline.py  validity_artifact.py  validity_lib.py
.claude/sdd/: CHARTER.md  EXEMPLAR-SPEC.md  README.md  _template.md  check_spec_status.py
.claude/skills/agy/: SKILL.md
.claude/skills/diagnose/: SKILL.md
.claude/skills/handoff/: SKILL.md
.claude/workflows/: deep-research-tiered.js
.github/workflows/: ci.yml
configs/: baseline.dev.yaml  baseline.yaml  gemini-confidence.yaml  gemini-logprobs.yaml  gemini-only.yaml  router.dev.yaml  router.yaml  routing-eval.dev.yaml  routing-eval.yaml
docs/: README.md  dataset.md  kbind-adoption.md
docs/adr/: 0001-eval-framework.md  0002-retrieval-architecture.md  0003-generation.md  0004-observability-tool.md  0005-llm-provider-matrix.md  0006-cassette-replay.md  0007-eval-record-schema.md  0008-failure-taxonomy.md  0009-triage-to-issues.md  0010-persist-judge-reasoning-bronze-gold.md  0011-escalation-signal.md  0012-router-generator-composite.md  README.md  _template.md
docs/analysis/: escalation-signal-validation.md  over-abstention.md  routing-verdict.md
docs/architecture/: README.md
docs/eval/: README.md
docs/observability/: README.md
infra/phoenix/: docker-compose.yml
results/: baseline.html  baseline.jsonl  baseline.md
scripts/: capture_retrieval_scores.py  routing_evaluation.py  signal_validation.py
src/enterprise_rag_ops/: __init__.py
src/enterprise_rag_ops/dashboard/: __init__.py  app.py  data.py
src/enterprise_rag_ops/eval/: __init__.py  abstention.py  aggregate.py  bronze.py  classify_cli.py  cli.py  config.py  failure_taxonomy.py  github.py  inspect_cli.py  interfaces.py  issues.py  issues_cli.py  metrics.py  openai_judge.py  prompt.py  questions.py  raw_call.py  records.py  report.py  retrieval_eval.py  retrieval_metrics.py  root_cause.py  runner.py  schema.py  stub_judge.py  threshold_sweep.py  triage.py  triage_cli.py
src/enterprise_rag_ops/generation/: __init__.py  cli.py  (+9 more)
tests/: conftest.py  test_smoke.py
tests/dashboard/: __init__.py  conftest.py  test_app.py  test_data.py
tests/eval/: conftest.py  test_abstention.py  test_aggregate.py  test_bronze.py  test_cli.py  test_config.py  test_failure_taxonomy.py  test_inspect_cli.py  test_issues.py  test_judge_anchor.py  test_judge_contract.py  test_metrics.py  test_openai_judge.py  test_openai_judge_stats.py  test_prompt.py  test_questions_loader.py  test_raw_call.py  test_records.py  test_report.py  test_retrieval_eval.py  test_retrieval_metrics.py  test_root_cause.py  test_runner.py  test_schema.py  test_triage.py
tests/generation/: conftest.py  test_anthropic_generator.py  test_cli.py  test_context_assembler.py  test_gemini_generator.py  test_generation_contract.py  test_generation_smoke.py  test_openai_generator_stats.py  test_prompt.py  test_router_generator.py  test_schema.py  test_stub_generator.py
tests/ingest/: test_adapters.py  test_cli.py  test_corpus.py  test_sampler.py  test_schema.py  test_writer.py
tests/observability/: __init__.py  test_attributes.py  test_exporter.py
tests/retrieval/: conftest.py  test_bm25_index.py  test_chunker.py  test_embedder.py  test_hybrid_retriever.py  test_pipeline_contract.py  test_pipeline_loader.py  test_retrieval_smoke.py  test_schema.py  test_vector_store.py
(+201 files in other folders)
