[project]
name = "enterprise-rag-ops"
version = "0.1.0"
description = "Production-grade RAG evaluation and observability over EnterpriseRAG-Bench."
authors = [
    { name = "Mauricio Araujo", email = "mauricio.araujo97@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0,<5.0",
    "pydantic>=2.6,<3.0",
    "bm25s>=0.2,<1.0",
    "sentence-transformers>=3.0,<6.0",
    "lancedb>=0.15,<1.0",
    "langchain-text-splitters>=0.3,<1.0",
    "openai>=1.50,<2.0",
    "anthropic>=0.40,<1.0",
    "arize-phoenix-otel>=0.16.0",
    "arize-phoenix-client>=2.7.0",
    "pandas>=2.0,<3.0",
    "streamlit>=1.40,<2.0",
    "google-genai>=1.0,<2.0",
]

[project.scripts]
rag-ingest = "enterprise_rag_ops.ingest.cli:main"
rag-index = "enterprise_rag_ops.retrieval.cli:main"
rag-ask = "enterprise_rag_ops.generation.cli:main"
rag-eval = "enterprise_rag_ops.eval.cli:main"
rag-export-traces = "enterprise_rag_ops.observability.cli:main"
rag-classify = "enterprise_rag_ops.eval.classify_cli:main"
rag-inspect = "enterprise_rag_ops.eval.inspect_cli:main"
rag-triage = "enterprise_rag_ops.eval.triage_cli:main"
rag-issues = "enterprise_rag_ops.eval.issues_cli:main"

[project.urls]
Repository = "https://github.com/mauricioarauujo/enterprise-rag-ops"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enterprise_rag_ops"]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=4.6.0",
    "vcrpy>=6.0,<7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "data", "results"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (ruff format handles it)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # allow assert False in tests

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: end-to-end tests touching real services",
    "corpus: validates the ingested data/processed/corpus.jsonl (run via make check-data)",
    "smoke: real-model retrieval Recall@k smoke (run via make retrieval-smoke; excluded from make test)",
    "vcr: marks tests using vcrpy cassettes to replay network calls",
]

[tool.coverage.run]
source = ["src/enterprise_rag_ops"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
